# wwise-audio-tools

./: .clang-format  .clang-format-ignore  .clang-tidy  .cmake-format.py  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.py  conanfile.txt
.github/workflows/: build.yml  ci.yml  clang-tidy.yml  docs.yml  lint.yml  package.yml  pre-commit.yml  validate.yml  verify.yml
cli/: main.cpp
cmake/: wwtoolsConfig.cmake.in
docs/: Doxyfile  Doxyfile.in
include/wwtools/: bnk.h  bnk.hpp  wwtools.h
include/wwtools/util/: event_name_to_id.h  write.h  write.hpp
src/: bnk.cpp  bnk.h  wwtools.cpp
src/kaitai/: kaitaistream.cpp  kaitaistream.h
src/kaitai/structs/: .clang-format  .clang-tidy  vlq.cpp  vlq.h
src/revorb/: revorb.cpp  revorb.h  revorb.hpp
src/ww2ogg/: bitstream.h  codebook.cpp  codebook.h  crc.c  crc.h  errors.h  packed_codebooks.cpp  packed_codebooks.h  packed_codebooks_aoTuV_603.cpp  ww2ogg.cpp  ww2ogg.h  wwriff.cpp  wwriff.h
test/: CMakeLists.txt  wem.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
tests/: wem.cpp
